Fix memleaking usage of QScriptValue

According to this Qt bug report https://bugreports.qt.io/browse/QTBUG-8400
QScriptValue leaks memory when it's not related to a QScriptEngine.
A workaround is to not create such QScriptValues.