botfather/src/engine/apis/browser_api.cpp
@@ -213,7 +213,7 @@ QScriptValue BrowserAPI::findMatches(const QImage &tpl, double threshold, int ma
 {
     QImage screenshot = Browser::takeScreenshot();
     VisionAPI *vapi = new VisionAPI(bot(), engine());
-    QScriptValue matches = vapi->findMatches(screenshot, tpl, threshold, max_matches);
+	QScriptValue matches(vapi->findMatches(screenshot, tpl, threshold, max_matches));
 	delete vapi;
 	return matches;
 }
@@ -222,7 +222,7 @@ QScriptValue BrowserAPI::findMatch(const QImage &tpl, double threshold)
 {
     QImage screenshot = Browser::takeScreenshot();
     VisionAPI *vapi = new VisionAPI(bot(), engine());
-	QScriptValue match = vapi->findMatch(screenshot, tpl, threshold);
+	QScriptValue match(vapi->findMatch(screenshot, tpl, threshold));
 	delete vapi;
     return match;
 }
